change the CSS rule to avoid wrapping in the middle of the shortcut text (#2759)

--- a/notebook/static/notebook/less/menubar.less
+++ b/notebook/static/notebook/less/menubar.less
@@ -161,6 +161,9 @@ ul#help_menu li a{
     color: darkgray;
     margin-left: 10px;
     text-transform: capitalize;
+    kbd {
+        white-space: nowrap;
+    }
 }
 
 //end submenu
